# flock-challenge

./: .gitignore  BENCHMARK.md  Cargo.toml  README.md  benchmark.json  benchmark.sh  setup.sh
.codex/: config.toml
.github/: actionlint.yaml
.github/workflows/: benchmark-blake3-mac.yml
benchmark-tools/: build-trusted-verifier.sh
benchmark-tools/common/: Cargo.toml
benchmark-tools/common/src/: lib.rs
benchmark-tools/harness/: Cargo.toml
benchmark-tools/harness/src/: main.rs
benchmark-tools/trusted/: SHA256SUMS  flock_benchmark_verifier
benchmark-tools/worker/: Cargo.toml
benchmark-tools/worker/src/: main.rs
crates/flock-core/src/: challenger.rs  lib.rs  lincheck.rs  merkle.rs  pcs.rs  scratch.rs  zerocheck.rs
crates/flock-core/src/field/: f128_slice.rs  gf2_8.rs
crates/flock-core/src/field/f128_slice/: aarch64.rs
crates/flock-core/src/field/gf2_128/: aarch64.rs
crates/flock-core/src/merkle/: aarch64.rs  ecore_sidecar.rs  metal_hybrid.rs  sha256_leaf.metal  sha256_leaf.metallib
crates/flock-core/src/ntt/: additive_ntt_f128.rs  inv_table.rs
crates/flock-core/src/ntt/additive_ntt_f128/: kernels.rs
crates/flock-core/src/pcs/: commit.rs  ligerito.rs  ring_switch.rs
crates/flock-core/src/zerocheck/: multilinear.rs  univariate_skip_optimized.rs
crates/flock-core/src/zerocheck/univariate_skip_optimized/: kernels.rs
crates/flock-prover/src/: proof_io.rs  prover.rs
crates/flock-prover/src/r1cs_hashes/: blake3.rs  common.rs
docs/: BLAKE3_MAC_BENCHMARK.md  blake3-benchmark-flow.html
(+7 files in other folders)
